# CUDARaytracing

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  main.cu
benchmark/: CMakeLists.txt  main.cu
src/: Camera.cuh  DeviceUtility.cuh  Error.cuh  HitableList.cuh  IHitable.cuh  Material.cuh  Ray.cuh  RayTracer.cu  RayTracer.cuh  Sphere.cuh  Utility.cuh  Vec3.cuh  main.cu
